--- a/wp-content/themes/think/src/scss/layout/_grid.scss
+++ b/wp-content/themes/think/src/scss/layout/_grid.scss
@@ -2,6 +2,7 @@
 
 .main {
     padding: 4em 0 0;
+    overflow: hidden;
     .no-js & {
         opacity: 1 !important;
     }
